--- a/sever_04_28/Assembly-CSharp.csproj
+++ b/sever_04_28/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\01_scriptes\PlayerHP.cs" />
      <Compile Include="Assets\01_scriptes\shotenemyspawn.cs" />
+     <Compile Include="Assets\01_scriptes\spawnboss.cs" />
      <Compile Include="Assets\01_scriptes\Destroyzone.cs" />
      <Compile Include="Assets\01_scriptes\Playershot.cs" />
      <Compile Include="Assets\01_scriptes\followenemy.cs" />
@@ -63,10 +64,10 @@
      <Compile Include="Assets\01_scriptes\followGhost.cs" />
      <Compile Include="Assets\01_scriptes\fire.cs" />
      <Compile Include="Assets\01_scriptes\movingplatform.cs" />
+     <Compile Include="Assets\01_scriptes\followGjost.cs" />
      <Compile Include="Assets\01_scriptes\PlayerMove.cs" />
      <Compile Include="Assets\01_scriptes\playerhit.cs" />
      <Compile Include="Assets\01_scriptes\Diesceen.cs" />
-     <Compile Include="Assets\01_scriptes\spawnboss.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
